<resources>
    <string name="app_name">KotlinAndroidTalks</string>
    <string name="toolbar_title">KotlinNotes</string>
    <string name="delete_note_title">Are you sure?</string>
    <string name="delete_note_message">You\'re about to delete your note</string>
    <string name="delete_action">Delete</string>
    <string name="cancel_action">Cancel</string>
    <string name="note_title">Note title</string>
    <string name="note_text">Note text</string>
    <string name="filter">Filter</string>
    <string name="save_note_error">Error saving a note!</string>
    <string name="save_note_action">Save</string>
    <string name="bill_amount_hint">Bill amount</string>
    <string name="deadline_hint">Deadline</string>
    <string name="colleague_name_hint">Colleague name</string>

    <string name="work_action">Work</string>
    <string name="bills_action">Bills</string>
    <string name="shopping_action">Shopping</string>
    <string name="regular_action">None</string>
    <string name="shopping_item_hint">Shopping item</string>
    <string name="add_new_item">Add new item</string>

</resources>
