<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <include layout="@layout/layout_note_input" />

    <android.support.design.widget.TextInputEditText
        android:id="@id/billInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal" />

    <android.support.design.widget.TextInputEditText
        android:id="@id/deadlineInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/deadline_hint"
        android:inputType="datetime" />

    <Button
        android:id="@id/doneAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_note_action" />

</LinearLayout>